fix display zoom selection on mobile

--- a/assets/pdfjs/web/viewer.css
+++ b/assets/pdfjs/web/viewer.css
@@ -2400,6 +2400,6 @@ html[dir='rtl'] #documentPropertiesOverlay .row > * {
 
 @media all and (max-width: 535px) {
   #scaleSelectContainer {
-    display: none;
+    display: none !important;
   }
 }
